@@ -55,6 +55,7 @@ intersect=org.apache.tools.ant.types.resources.Intersect
 sort=org.apache.tools.ant.types.resources.Sort
 resources=org.apache.tools.ant.types.resources.Resources
 first=org.apache.tools.ant.types.resources.First
+last=org.apache.tools.ant.types.resources.Last
 tarfileset=org.apache.tools.ant.types.TarFileSet
 tokens=org.apache.tools.ant.types.resources.Tokens
 
